fix: refer to description
- fix margin issue causing horizontal scroll on desktop

- change button redirect from location.href to window.open to add same functionality as target="_blank"

- change request os from an anchor tag to a download box to keep consistency

--- a/src/app.scss
+++ b/src/app.scss
@@ -37,9 +37,11 @@ html, body {
     background-color: var(--background);
     color: var(--color);
 }
-.grey {
+a.grey {
     color: var(--color-secondary);
-    cursor: not-allowed !important;
+    &:hover {
+        color: var(--color);
+    }
 }
 
 p,
